@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-13T16:16:04Z",
+  "timestamp" : "2024-05-14T16:15:52Z",
   "count_outdated" : 1124,
   "uniques_outdated" : 322,
-  "count" : 1145,
-  "uniques" : 325,
+  "count" : 1149,
+  "uniques" : 326,
   "views" : [
     {
       "timestamp": "2024-05-02T00:00:00Z",
@@ -28,6 +28,15 @@
       "count": 14,
       "count_minmax": [ 14, 14 ],
       "count_decinc": [ 0, 14 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-14T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
