@@ -1,6 +1,6 @@
 {
-  "count": 21,
-  "uniques": 3,
+  "count": 25,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2024-05-02T00:00:00Z",
@@ -15,6 +15,11 @@
     {
       "timestamp": "2024-05-06T00:00:00Z",
       "count": 14,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-14T00:00:00Z",
+      "count": 4,
       "uniques": 1
     }
   ]
